[package]
name = "vacuum-cs"
version = "1.0.1"
edition = "2021"
authors = ["Luciano Vieira Rodrigues <luciano@codesolver.com.br>"]
description = "PostgreSQL vacuum tool using Rust by Code Solver"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
log = "0.4.25"
log4rs = "1.3.0"
postgres = "0.19.10"
